--- a/youtube-clone/backend/src/main/resources/application.properties
+++ b/youtube-clone/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=youtube-clone
+######### Amazon S3 Credentials #########
+cloud.aws.region.static=eu-west-1
+cloud.aws.stack.auto=false
